--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ a{
 text-decoration:none;
 color:black;
 }
-nav{
-  background-color:blue;
+body {
+  font-family: Verdana, sans-serif;
+  background-color:whitesmoke;
+  color: #003ea9;
+  margin:0;
 }
