--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
-a{                          
-text-decoration:none;
-color:black;
+a:visited{
+  color: white;
 }
+a{
+  text-decoration: none;
+}
+
 body {
   font-family: Verdana, sans-serif;
   background-color:whitesmoke;
   color: #003ea9;
   margin:0;
 }
-header {
+
+header {  
   background-color: #003ea9;
   padding: 1rem;
 }
+
+
+
+
