--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   height: 100%;
   margin: 0;
   font-family: Verdana, sans-serif;
-  background-color: whitesmoke;
+  background-color:beige;
   color: #003ea9;
 }
 .wrapper {
